# gammar

./: Cargo.toml  Dioxus.toml  README.md  build.rs
.github/workflows/: build.yaml
assets/: main.css  tailwind.css
src/: components.rs  lib.rs  main.rs  profiles.rs  tabs.rs  windows.rs
src/components/: header.rs  slider.rs
src/tabs/: keybinds.rs  profiles.rs  settings.rs
src/windows/: display.rs  hotkeys.rs
