[package]
name = "gammar"
version = "0.1.1"
authors = ["CmdrSharp"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
global-hotkey = "0.7"
image = "0.25"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Devices_Display",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
